fix: Arreglada la no visibilidad del título

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -29,10 +29,10 @@ header {
   justify-content: flex-start; /* Alinea todo al principio (izquierda) */
   gap: 20px;
 }
-
 header h1 {
   margin: 0;
   font-size: 2.5rem;
+  color: white;
 }
 
 header img {
